--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <title>Udacity Hut</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
+        <style>
+            body {
+                background-color: rgb(209, 68, 68);
+            }
+            .controls {
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
 
