Button auf jeder pizza, removie funktioniert nicht

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             margin: .5em;
         }
 
-        .remove-pizza {
+        
+        #removeButtonId {
             background: darkgreen;
             color: white;
             padding: 0.25em;
@@ -49,7 +50,7 @@
 
     <div class="controls">
         <button class="add-pizza">Add Pizza</button>
-        <button class="remove-pizza">X</button>
+        
     </div>
 
     <ul class="pizza-list"></ul>
